// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardSelect /> First card selected First card selected 1`] = `
<div
  className="pgn__form-group"
>
  <div
    className="row pgn__form-control-set-inline"
    id="form-field1"
    role="radiogroup"
  >
    <div
      aria-label="Lorem Ipsum 1"
      className="mb-3 col-md-3 offset-md-1"
      role="group"
    >
      <div
        className="card"
      >
        <img
          className="card-img-top"
        />
        <div
          className="card-body"
        >
          <h5
            className="card-title mb-1 card-title"
          >
            <label
              htmlFor="card1"
            >
              Lorem Ipsum 1
            </label>
            <div
              className="float-right"
            >
              <div
                className="pgn__form-radio"
              >
                <input
                  className="pgn__form-radio-input"
                  defaultChecked={true}
                  id="card1"
                  name="radio-select-card"
                  onChange={[Function]}
                  type="radio"
                  value="card1"
                />
                <div>
                  <label
                    className="pgn__form-label"
                    htmlFor="card1"
                  />
                </div>
              </div>
            </div>
          </h5>
          <p
            className="card-text"
          />
        </div>
        <div
          className="card-footer"
        >
          <small
            className="text-muted"
          />
        </div>
      </div>
    </div>
    <div
      aria-label="Lorem Ipsum 2"
      className="mb-3 col-md-3 offset-md-1"
      role="group"
    >
      <div
        className="card"
      >
        <img
          className="card-img-top"
          src="https://source.unsplash.com/360x200/?nature"
        />
        <div
          className="card-body"
        >
          <h5
            className="card-title mb-1 card-title"
          >
            <label
              htmlFor="card2"
            >
              Lorem Ipsum 2
            </label>
            <div
              className="float-right"
            >
              <div
                className="pgn__form-radio"
              >
                <input
                  className="pgn__form-radio-input"
                  defaultChecked={false}
                  id="card2"
                  name="radio-select-card"
                  onChange={[Function]}
                  type="radio"
                  value="card2"
                />
                <div>
                  <label
                    className="pgn__form-label"
                    htmlFor="card2"
                  />
                </div>
              </div>
            </div>
          </h5>
          <p
            className="card-text"
          />
        </div>
        <div
          className="card-footer"
        >
          <small
            className="text-muted"
          />
        </div>
      </div>
    </div>
    <div
      aria-label="Lorem Ipsum 3"
      className="mb-3 col-md-3 offset-md-1"
      role="group"
    >
      <div
        className="card"
      >
        <img
          className="card-img-top"
          src="https://source.unsplash.com/360x200"
        />
        <div
          className="card-body"
        >
          <h5
            className="card-title mb-1 card-title"
          >
            <label
              htmlFor="card3"
            >
              Lorem Ipsum 3
            </label>
            <div
              className="float-right"
            >
              <div
                className="pgn__form-radio"
              >
                <input
                  className="pgn__form-radio-input"
                  defaultChecked={false}
                  id="card3"
                  name="radio-select-card"
                  onChange={[Function]}
                  type="radio"
                  value="card3"
                />
                <div>
                  <label
                    className="pgn__form-label"
                    htmlFor="card3"
                  />
                </div>
              </div>
            </div>
          </h5>
          <p
            className="card-text"
          />
        </div>
        <div
          className="card-footer"
        >
          <small
            className="text-muted"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CardSelect /> Second card selected Second card selected 1`] = `
<div
  className="pgn__form-group"
>
  <div
    className="row pgn__form-control-set-inline"
    id="form-field5"
    role="radiogroup"
  >
    <div
      aria-label="Lorem Ipsum 1"
      className="mb-3 col-md-3 offset-md-1"
      role="group"
    >
      <div
        className="card"
      >
        <img
          className="card-img-top"
        />
        <div
          className="card-body"
        >
          <h5
            className="card-title mb-1 card-title"
          >
            <label
              htmlFor="card1"
            >
              Lorem Ipsum 1
            </label>
            <div
              className="float-right"
            >
              <div
                className="pgn__form-radio"
              >
                <input
                  className="pgn__form-radio-input"
                  defaultChecked={false}
                  id="card1"
                  name="radio-select-card"
                  onChange={[Function]}
                  type="radio"
                  value="card1"
                />
                <div>
                  <label
                    className="pgn__form-label"
                    htmlFor="card1"
                  />
                </div>
              </div>
            </div>
          </h5>
          <p
            className="card-text"
          />
        </div>
        <div
          className="card-footer"
        >
          <small
            className="text-muted"
          />
        </div>
      </div>
    </div>
    <div
      aria-label="Lorem Ipsum 2"
      className="mb-3 col-md-3 offset-md-1"
      role="group"
    >
      <div
        className="border border-dark card"
      >
        <img
          className="card-img-top"
          src="https://source.unsplash.com/360x200/?nature"
        />
        <div
          className="card-body"
        >
          <h5
            className="card-title mb-1 card-title"
          >
            <label
              htmlFor="card2"
            >
              Lorem Ipsum 2
            </label>
            <div
              className="float-right"
            >
              <div
                className="pgn__form-radio"
              >
                <input
                  className="pgn__form-radio-input"
                  defaultChecked={true}
                  id="card2"
                  name="radio-select-card"
                  onChange={[Function]}
                  type="radio"
                  value="card2"
                />
                <div>
                  <label
                    className="pgn__form-label"
                    htmlFor="card2"
                  />
                </div>
              </div>
            </div>
          </h5>
          <p
            className="card-text"
          />
        </div>
        <div
          className="card-footer"
        >
          <small
            className="text-muted"
          />
        </div>
      </div>
    </div>
    <div
      aria-label="Lorem Ipsum 3"
      className="mb-3 col-md-3 offset-md-1"
      role="group"
    >
      <div
        className="card"
      >
        <img
          className="card-img-top"
          src="https://source.unsplash.com/360x200"
        />
        <div
          className="card-body"
        >
          <h5
            className="card-title mb-1 card-title"
          >
            <label
              htmlFor="card3"
            >
              Lorem Ipsum 3
            </label>
            <div
              className="float-right"
            >
              <div
                className="pgn__form-radio"
              >
                <input
                  className="pgn__form-radio-input"
                  defaultChecked={false}
                  id="card3"
                  name="radio-select-card"
                  onChange={[Function]}
                  type="radio"
                  value="card3"
                />
                <div>
                  <label
                    className="pgn__form-label"
                    htmlFor="card3"
                  />
                </div>
              </div>
            </div>
          </h5>
          <p
            className="card-text"
          />
        </div>
        <div
          className="card-footer"
        >
          <small
            className="text-muted"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
